# echo

./: CMakeLists.txt  CONCEPT.md  LICENSE  README.md  syntax.eco  test.eco
.github/workflows/: cmake-tests.yml
book/concept/: arrays.md  cbinding.md  expressions.md  operators.md  pointers_and_refs.md  value_types.md
include/: Debugging.h  Lexer.h  Token.h  eco.h
include/AST/: ASTBundle.h  ASTCodeRef.h  ASTCollector.h  ASTContext.h  ASTFile.h  ASTFunctionMatcher.h  ASTIssue.h  ASTMangler.h  ASTModule.h  ASTModuleEmbedder.h  ASTNamespace.h  ASTNode.h  ASTNodeReference.h  ASTNodeTypes.h  ASTOps.h  ASTSymbol.h  ASTValueType.h  ASTValueTypeCollection.h  ASTVisitor.h  AttributeNode.h  ExprNode.h  FunctionDeclNode.h  IfStatementNode.h  LiteralValueNode.h  NamespaceDeclNode.h  NamespaceNode.h  NullNode.h  OperatorNode.h  ReturnNode.h  ScopeNode.h  TypeCastNode.h  TypeNode.h  VarDeclNode.h  VarMutNode.h  VarRefNode.h  WhileStatementNode.h
include/Compiler/: CompilerException.h
include/Compiler/LLVM/: CompilationUnit.h  LLVMCompiler.h  SymbolTable.h
include/Parser/: AttributeParser.h  EchoPrintParser.h  ExprParser.h  FuncCallParser.h  FuncDeclParser.h  IfStatementParser.h  ModuleParser.h  NamespaceParser.h  ParserCursor.h  ParserPayload.h  ReturnParser.h  ScopeParser.h  SymbolParser.h  TypeParser.h  VarDeclParser.h  WhileStatementParser.h
src/: Debugging.cpp  Lexer.cpp  Token.cpp  main.cpp
src/AST/: ASTBundle.cpp  ASTCodeRef.cpp  ASTCollector.cpp  ASTContext.cpp  ASTFile.cpp  ASTFunctionMatcher.cpp  ASTIssue.cpp  ASTMangler.cpp  ASTModule.cpp  ASTModuleEmbedder.cpp  ASTNamespace.cpp  ASTNode.cpp  ASTOps.cpp  ASTSymbol.cpp  ASTValueType.cpp  ASTValueTypeCollection.cpp  ASTVisitor.cpp  AttributeNode.cpp  ExprNode.cpp  FunctionDeclNode.cpp  IfStatementNode.cpp  LiteralValueNode.cpp  NamespaceDeclNode.cpp  NamespaceNode.cpp  NullNode.cpp  OperatorNode.cpp  ReturnNode.cpp  ScopeNode.cpp  TypeCastNode.cpp  VarDeclNode.cpp  VarMutNode.cpp  VarRefNode.cpp  WhileStatementNode.cpp
src/Compiler/: CompilerException.cpp
src/Compiler/LLVM/: CompilationUnit.cpp  LLVMCompiler.cpp  SymbolTable.cpp
src/Parser/: AttributeParser.cpp  EchoPrintParser.cpp  ExprParser.cpp  FuncCallParser.cpp  FuncDeclParser.cpp  IfStatementParser.cpp  ModuleParser.cpp  NamespaceParser.cpp  ParserCursor.cpp  ReturnParser.cpp  ScopeParser.cpp  SymbolParser.cpp  TypeParser.cpp  VarDeclParser.cpp  WhileStatementParser.cpp
stdlib/math/: functions.eco  string.eco
stdlib/symbolic/: math.eco
tests/: ast_function_matching.cpp  ast_node_literal.cpp  ast_ops_test.cpp  ast_ref.cpp  ast_type_test.cpp  helpers.cpp  helpers.h  lexer_test.cpp  parser_expr_literal_float.cpp  parser_expr_literal_int.cpp
